# regensburg-haskell-testing

./: README.md  regensburg-haskell-testing.cabal
lib/: Regensburg.hs
src/: Test.hs
