name:                regensburg-haskell-testing
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Lars Hupel
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.18

library
  exposed-modules:     Regensburg
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:
      base >=4.7 && <4.8
    , QuickCheck ==2.7.*

executable test
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Test.hs
  build-depends:
      base >=4.7 && <4.8
    , regensburg-haskell-testing
    , QuickCheck ==2.7.*
    , tasty ==0.10.*
    , tasty-html ==0.3.*
    , tasty-hunit ==0.9.*
    , tasty-quickcheck ==0.8.*
